--- a/themes/MountainlandTheme/templates/cart/_cart_list_frame.html.twig
+++ b/themes/MountainlandTheme/templates/cart/_cart_list_frame.html.twig
@@ -1,7 +1,7 @@
 <turbo-frame
     id="cart-list-frame"
     data-controller="refresh"
-    data-action="reload@window->refresh#reload">
+    data-action="cart-updated@window->refresh#reload">
     <div class="cart-grid">
         <div class="cart-items">
             {% for item in cart.items  %}
