--- a/themes/MountainlandTheme/templates/partials/_branch_header.html.twig
+++ b/themes/MountainlandTheme/templates/partials/_branch_header.html.twig
@@ -1,3 +1,11 @@
-<turbo-frame id="branch-data-frame">
-    You're shopping at<br><strong>{{ branchData.name }}</strong>
+<turbo-frame
+    id="branch-data-frame"
+    data-controller="refresh"
+    data-action="branch-updated@window->refresh#reload">
+    <a class="branch-dropdown" id="branch-dropdown" href="/locations" data-turbo-frame="_top">
+        <div class="branch-info" id="branch-info">
+            <img src="{{ asset('images/misc/location-icon.png') }}" alt="Location" class="location-icon" />
+            <span class="branch-text" id="branch-status">You're shopping at<br><strong>{{ branchData.name }}</strong></span>
+        </div>
+    </a>
 </turbo-frame>
