Split purchasable resolver and storage and add PurchasableContext.php

--- a/themes/MountainlandTheme/templates/checkout/_order_summary.html.twig
+++ b/themes/MountainlandTheme/templates/checkout/_order_summary.html.twig
@@ -29,6 +29,8 @@
             </div>
         {% endif %}
 
+        <button class="btn-primary full" type="submit">Next</button>
+
         {% if button_text is defined %}
             {% if button_data_attribute is defined %}
                 <button class="btn-primary full" type="button" {{ button_data_attribute }}>{{ button_text }}</button>
