--- a/themes/MountainlandTheme/templates/partials/_branch_header.html.twig
+++ b/themes/MountainlandTheme/templates/partials/_branch_header.html.twig
@@ -5,7 +5,7 @@
     <a class="branch-dropdown" id="branch-dropdown" href="/locations" data-turbo-frame="_top">
         <div class="branch-info" id="branch-info">
             <img src="{{ asset('images/misc/location-icon.png') }}" alt="Location" class="location-icon" />
-            <span class="branch-text" id="branch-status">You're shopping at<br><strong>{{ branchData.name }}</strong></span>
+            <span class="branch-text" id="branch-status">You're shopping at<br><strong>{{ branch.name }}</strong></span>
         </div>
     </a>
 </turbo-frame>
