--- a/themes/MountainlandTheme/templates/checkout/_order_summary.html.twig
+++ b/themes/MountainlandTheme/templates/checkout/_order_summary.html.twig
@@ -4,20 +4,20 @@
         <h2>Order Summary</h2>
         <div class="summary-row">
             <span>Subtotal</span>
-            <span>${{ cart.subTotal|number_format(2, '.', ',') }}</span>
+            <span>${{ order.subTotal|number_format(2, '.', ',') }}</span>
         </div>
         <div class="summary-row">
             <span>Shipping ({{ shipMethods|length ? (shipMethods|first).name : 'Shipping' }})</span>
-            <span>${{ cart.freight|number_format(2, '.', ',') }}</span>
+            <span>${{ order.freight|number_format(2, '.', ',') }}</span>
         </div>
         <div class="summary-row">
             <span>Tax (est.)</span>
-            <span>${{ cart.tax|number_format(2, '.', ',') }}</span>
+            <span>${{ order.tax|number_format(2, '.', ',') }}</span>
         </div>
         <hr />
         <div class="summary-row total">
             <span>Total</span>
-            <span>${{ cart.totalDue|number_format(2, '.', ',') }}</span>
+            <span>${{ order.totalDue|number_format(2, '.', ',') }}</span>
         </div>
 
         {% if show_terms_agreement is defined and show_terms_agreement %}
