--- a/themes/MountainlandTheme/templates/checkout/shipping.html.twig
+++ b/themes/MountainlandTheme/templates/checkout/shipping.html.twig
@@ -10,25 +10,21 @@
             </div>
 
             <div class="form-group form-inline">
-                <label>
-                    {{ form_widget(form.addNewAddress, {
-                        attr: {
-                            id: 'add-new-address',
-                            'data-checkout-target': 'checkbox',
-                            'data-action': 'change->checkout#toggle'
-                        }
-                    }) }}
-                    Add new address
-                </label>
-                {{ form_errors(form.addNewAddress) }}
+                {{ form_row(form.addNewAddress, {
+                    label: 'Add new address',
+                    attr: {
+                        id: 'add-new-address',
+                        'data-checkout-target': 'checkbox',
+                        'data-action': 'change->checkout#toggle'
+                    }
+                }) }}
             </div>
 
             <div id="new-address-section"
                  class="new-address-form"
                  style="display: none;"
                  data-checkout-target="newAddressSection">
-                {# Later: convert this include into a Symfony sub-form. #}
-                {{ include('partials/_address.html.twig', { 'prefix': 'new-address' }) }}
+                {% include 'partials/_address.html.twig' with { addressForm: form.address } %}
             </div>
         </article>
 
