--- a/themes/MountainlandTheme/templates/checkout/payment.html.twig
+++ b/themes/MountainlandTheme/templates/checkout/payment.html.twig
@@ -30,9 +30,9 @@
                     </div>
                 </div>
 
-                <h4 class="section-subtitle">Billing Address</h4>
-                {{ include('partials/_address.html.twig', { 'prefix': 'billing' }) }}
-                <p class="fine-print">Your payment information is secure and encrypted.</p>
+{#                <h4 class="section-subtitle">Billing Address</h4>#}
+{#                {{ include('partials/_address.html.twig', { 'prefix': 'billing' }) }}#}
+{#                <p class="fine-print">Your payment information is secure and encrypted.</p>#}
             </div>
         </article>
 
