--- a/themes/MountainlandTheme/templates/checkout/review.html.twig
+++ b/themes/MountainlandTheme/templates/checkout/review.html.twig
@@ -1,7 +1,7 @@
 {% extends '/checkout/checkout.html.twig' %}
 
 {% block checkout_step %}
-    <section class="checkout-step-panel" data-step="review">
+    <section class="checkout-step-panel is-active" data-step="review">
         <article class="card">
 
         </article>
