--- a/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
+++ b/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
@@ -9,7 +9,9 @@
     <div class="item-body">
         <div class="item-row">
             <div>
-                <h3>{{ item.product.name }}</h3>
+                <h3>
+                    <a href="{{ path('pimcore_element', {'element': item.product}) }}" data-turbo-frame="_top">{{ item.product.name }}</a>
+                </h3>
                 <p class="item-meta">SKU: {{ item.product.productId }}</p>
                 <div class="pill-row">
                     <span class="pill">{{ item.product.brand }}</span>
