change file types

--- a/themes/MountainlandTheme/templates/customer/signin.html.twig
+++ b/themes/MountainlandTheme/templates/customer/signin.html.twig
@@ -98,38 +98,38 @@
         </div>
 
         <div class="benefits-img" style="position: relative;">
-            <img src="{{ asset('images/misc/warehouse.png') }}" alt="Benefits Image">
+            <img src="{{ asset('images/misc/warehouse.webp') }}" alt="Benefits Image">
             <div class="benefits-img-overlay">
                 When You Shop<br>Mountainland Supply Co.<br>Online You Can...
             </div>
         </div>
         <div class="benefits-card">
                 <div class="benefit-item">
-                    <div class="benefit-check"><img src="{{ asset('images/misc/check.png') }}"></div>
+                    <div class="benefit-check"><img src="{{ asset('images/misc/check.webp') }}"></div>
                     <p>Get special pricing</p>
                 </div>
                 <div class="benefit-item">
-                    <div class="benefit-check"><img src="{{ asset('images/misc/check.png') }}"></div>
+                    <div class="benefit-check"><img src="{{ asset('images/misc/check.webp') }}"></div>
                     <p>Personalized shopping lists</p>
                 </div>
                 <div class="benefit-item">
-                    <div class="benefit-check"><img src="{{ asset('images/misc/check.png') }}"></div>
+                    <div class="benefit-check"><img src="{{ asset('images/misc/check.webp') }}"></div>
                     <p>View promotions, deals, & events</p>
                 </div>
                 <div class="benefit-item">
-                    <div class="benefit-check"><img src="{{ asset('images/misc/check.png') }}"></div>
+                    <div class="benefit-check"><img src="{{ asset('images/misc/check.webp') }}"></div>
                     <p>Contact your salesman</p>
                 </div>
                 <div class="benefit-item">
-                    <div class="benefit-check"><img src="{{ asset('images/misc/check.png') }}"></div>
+                    <div class="benefit-check"><img src="{{ asset('images/misc/check.webp') }}"></div>
                     <p>View your bids & quotes</p>
                 </div>
                 <div class="benefit-item">
-                    <div class="benefit-check"><img src="{{ asset('images/misc/check.png') }}"></div>
+                    <div class="benefit-check"><img src="{{ asset('images/misc/check.webp') }}"></div>
                     <p>View your order & product history</p>
                 </div>
                 <div class="benefit-item">
-                    <div class="benefit-check"><img src="{{ asset('images/misc/check.png') }}"></div>
+                    <div class="benefit-check"><img src="{{ asset('images/misc/check.webp') }}"></div>
                     <p>And much, much more</p>
                 </div>
         </div>
