--- a/themes/MountainlandTheme/templates/product/product-detail.html.twig
+++ b/themes/MountainlandTheme/templates/product/product-detail.html.twig
@@ -16,6 +16,7 @@
     <header class="cart-header">
         <div>
             <h1>{{ product.name }}</h1>
+            {{ product.width }}
         </div>
     </header>
 </main>
