--- a/templates/components/Button.html.twig
+++ b/templates/components/Button.html.twig
@@ -1,3 +1,3 @@
 <{{ tag }} {{ attributes.defaults({
-    class: this.sizeClasses~' '~this.variantClasses~' font-medium rounded-lg focus:outline-none transition-colors',
+    class: this.buttonClasses,
 }) }}>{% block content %}{% endblock %}</{{ tag }}>
