--- a/templates/components/Gallery.html.twig
+++ b/templates/components/Gallery.html.twig
@@ -1,4 +1,4 @@
-<div {{ attributes.defaults({class: 'space-y-4'}) }}>
+<div class="space-y-4">
     <div class="aspect-square w-full bg-gray-100 rounded-lg overflow-hidden">
         <img src="{{ asset(mainImage ?? 'var/assets/images/misc/camera.webp') }}" alt="Product Image" class="w-full h-full object-cover" />
     </div>
