--- a/themes/MountainlandTheme/templates/layout.html.twig
+++ b/themes/MountainlandTheme/templates/layout.html.twig
@@ -30,6 +30,7 @@
         {{ pimcore_head_link() }}
     {% endblock %}
 
+    <link rel="stylesheet" href="{{ asset('css/tailwind.css') }}" />
     <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
 
     {{ importmap('app') }}
