--- a/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
+++ b/themes/MountainlandTheme/templates/cart/_cart_item.html.twig
@@ -10,11 +10,11 @@
         <div class="item-row">
             <div>
                 <h3>
-                    <a href="{{ path('pimcore_element', {'element': item.product}) }}" data-turbo-frame="_top">{{ item.product.name }}</a>
+                    <a href="{{ path('product_detail', {'productId': item.product.productId}) }}" data-turbo-frame="_top">{{ item.product.name }}</a>
                 </h3>
                 <p class="item-meta">SKU: {{ item.product.productId }}</p>
                 <div class="pill-row">
-                    <span class="pill">{{ item.product.brand }}</span>
+                    <span class="pill">{{ item.product.brandName }}</span>
                 </div>
             </div>
             <span class="item-price">{{ item.price|number_format(2, '.', ',') }} / {{ item.quantityOrdered.uom }}</span>
