--- a/themes/MountainlandTheme/templates/components/ProductSummary.html.twig
+++ b/themes/MountainlandTheme/templates/components/ProductSummary.html.twig
@@ -1,6 +1,8 @@
 <div class="space-y-4">
-    <h2 class="text-2xl font-bold text-gray-900">{{ name|default('Product Name') }}</h2>
-    <p class="text-gray-600 leading-relaxed">{{ description|default('Product description and features will appear here.') }}</p>
+    <h2 class="text-2xl font-bold mcs-primary-text">{{ name|default('Product Name') }}</h2>
+    {% if description %}
+        <div class="text-gray-600 leading-relaxed">{{ description|raw }}</div>
+    {% endif %}
 
     {{ include('components/Product/ProductAvailability.html.twig', {
         productId: productId|default(null),
@@ -12,7 +14,9 @@
 
     {{ include('components/Product/ProductActions.html.twig', {
         quantity: quantity|default(1),
-        buttonText: buttonText|default('Add to Cart')
+        addToCartText: addToCartText|default('Add to Cart'),
+        cartProductId: cartProductId|default(null),
+        cartUom: cartUom|default('EA')
     }) }}
 
     {{ include('components/Accordion.html.twig', {
